fix Explore tag wrapping

--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -40,3 +40,13 @@
     font-family: 'Bebas Neue', cursive;
     font-size: x-large;
 }
+
+.exploreTags {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+}
